cyclonedx-bom/src/specs/v1_4/snapshots/cyclonedx_bom__specs__v1_4__organization__test__it_should_write_xml_multiple_urls_contacts.snap
---
source: cyclonedx-bom/src/specs/v1_4/organization.rs
expression: xml_output
---
<?xml version="1.0" encoding="utf-8"?>
<supplier>
  <name>name</name>
  <url>url</url>
  <url>url</url>
  <contact>
    <name>name</name>
    <email>email</email>
    <phone>phone</phone>
  </contact>
  <contact>
    <name>name</name>
    <email>email</email>
    <phone>phone</phone>
  </contact>
</supplier>
